trunk/Archive2/16/a7feed152068f1/output
+ g++ -O2 -std=c++11 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:17:14: error: default type conversion can't deduce template argument for 'template<class T> Var::operator T() const'
     switch (v)
              ^
+ echo 1
1
